gccida/c0/reg_overlap_mentioned_for_reload_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6715:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6715:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6717:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6717:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6765:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)xa)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6766:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)xa)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_overlap_mentioned_for_reload_p/src/obj/reload.o] Error 1
